color style change

--- a/download.html
+++ b/download.html
@@ -59,7 +59,7 @@
 <body>
 
 <header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm bg-light">
+    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
         <div class="container">
             <a href="./" class="navbar-brand">
                 <img style="width: 200px; " src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
@@ -70,19 +70,19 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="features.html">Features</a>
+                        <a class="nav-link text-dark" href="features.html">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="quickstart.html">Quickstart</a>
+                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-blue" href="download.html">Download</a>
+                        <a class="nav-link text-dark" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="plugin.html">IDE plugin</a>
+                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="documentation.html">Docs</a>
+                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
                     </li>
                 </ul>
             </div>
@@ -93,14 +93,14 @@
 <main role="main" id="download">
     <section class="jumbotron">
         <div class="container">
-            <h1 class="text-center mc-blue">Download</h1>
+            <h1 class="text-center">Download</h1>
             <br/><br/><br/>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Binary Cli</h4>
                         <p class="lead">
-                            You can download Microconfig for your OS from <a class="mc-blue"
+                            You can download Microconfig for your OS from <a class=""
                                 href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
                         </p>
                     </div>
@@ -119,16 +119,16 @@
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Jar Cli</h4>
                         <p class="lead">
-                            You can download Microconfig executable jar from <a class="mc-blue"
+                            You can download Microconfig executable jar from <a class=""
                                 href="https://github.com/microconfig/microconfig/releases">Github</a> or
-                            <a class="mc-blue" href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven Central</a>.
+                            <a class="" href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven Central</a>.
                         </p>
                     </div>
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Core Jar</h4>
                         <p class="lead">
                             If you want to add Microconfig-core as a dependency to your Java project use
-                            <a class="mc-blue" href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core</a>.
+                            <a class="" href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core</a>.
                         </p>
                         <br/>
                     </div>
@@ -138,7 +138,7 @@
 
             <h4 class="text-center mc-green">How-To</h4>
             <p class="lead text-center">
-                Check out <a class="mc-blue" href="quickstart.html">quickstart</a> to learn how to use Microconfig.
+                Check out <a class="" href="quickstart.html">quickstart</a> to learn how to use Microconfig.
             </p>
         </div>
     </section>
