--- a/features.html
+++ b/features.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm bg-light">
+    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
         <div class="container">
             <a href="./" class="navbar-brand">
                 <img style="width: 200px; " src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
@@ -69,19 +69,19 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link mc-blue" href="features.html">Features</a>
+                        <a class="nav-link text-dark" href="features.html">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="quickstart.html">Quickstart</a>
+                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="download.html">Download</a>
+                        <a class="nav-link text-dark" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="plugin.html">IDE plugin</a>
+                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="documentation.html">Docs</a>
+                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
                     </li>
                 </ul>
             </div>
@@ -104,7 +104,7 @@
     <section class="jumbotron">
         <div class="container">
             <article class="markdown-body entry-content" itemprop="text">
-                <h1 class="mc-blue">Features</h1>
+                <h1 class="">Features</h1>
                 <p>This guide describes how Microconfig can help you solve common microservice configuration
                     problems.<br/> More details you can find in <a href="documentation.html">Docs</a>. </p>
                 <section id="layout">
