--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm bg-light">
+    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
         <div class="container">
             <a href="./" class="navbar-brand">
                 <img style="width: 200px; " src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
@@ -70,19 +70,19 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="features.html">Features</a>
+                        <a class="nav-link text-dark" href="features.html">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="quickstart.html">Quickstart</a>
+                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="download.html">Download</a>
+                        <a class="nav-link text-dark" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="plugin.html">IDE plugin</a>
+                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="documentation.html">Docs</a>
+                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
                     </li>
                 </ul>
             </div>
@@ -106,7 +106,7 @@
 
     <div class="py-5 bg-light">
         <div class="container" style="padding: 0; margin-bottom: 2.5rem; text-align: center;">
-            <h2 class="mc-blue"> How Microconfig can help </h2>
+            <h2 class=""> How Microconfig can help </h2>
         </div>
         <div class="container">
             <div class="row">
