--- a/plugin.html
+++ b/plugin.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm bg-light">
+    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
         <div class="container">
             <a href="./" class="navbar-brand">
                 <img style="width: 200px; " src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
@@ -69,19 +69,19 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="features.html">Features</a>
+                        <a class="nav-link text-dark" href="features.html">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="quickstart.html">Quickstart</a>
+                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="download.html">Download</a>
+                        <a class="nav-link text-dark" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-blue" href="plugin.html">IDE plugin</a>
+                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="documentation.html">Docs</a>
+                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
                     </li>
                 </ul>
             </div>
@@ -93,7 +93,7 @@
     <section class="jumbotron">
         <div class="container">
             <article class="markdown-body entry-content" itemprop="text">
-                <h1 class="mc-blue">JetBrains IDE plugin
+                <h1 class="">JetBrains IDE plugin
                     <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io">
                         <img alt="JetBrains IDE plugins"
                              src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
@@ -179,7 +179,7 @@
                     Marketplace</code>
                 </p>
                 <p>Or download plugin zip file from
-                    <a class="mc-blue" href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">JetBrains
+                    <a class="" href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">JetBrains
                         Plugin repository</a> and import it via <br/> <code>Settings -&gt; Plugins -&gt; Install plugin
                         from disk...</code>
                 </p>
