--- a/quickstart.html
+++ b/quickstart.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm bg-light">
+    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
         <div class="container">
             <a href="./" class="navbar-brand">
                 <img style="width: 200px; " src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
@@ -69,19 +69,19 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="features.html">Features</a>
+                        <a class="nav-link text-dark" href="features.html">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-blue" href="quickstart.html">Quickstart</a>
+                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="download.html">Download</a>
+                        <a class="nav-link text-dark" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="plugin.html">IDE plugin</a>
+                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mc-green" href="documentation.html">Docs</a>
+                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
                     </li>
                 </ul>
             </div>
@@ -92,12 +92,12 @@
 <main role="main" id="download">
     <section class="jumbotron">
         <div class="container">
-            <h1 id="quickstart" class="mc-blue">Quickstart</h1>
+            <h1 id="quickstart" class="">Quickstart</h1>
             <p>You will learn how to build configuration with Microconfig.</p>
             <br/>
 
             <section>
-                <h2 class="mc-teal" id="setup">Setup</h2><br/>
+                <h2 class="" id="setup">Setup</h2><br/>
 
                 <h3 class="mc-green" id="example-repository">Get Example Config</h3>
                 <p>Checkout with <code>git</code></p>
@@ -133,7 +133,7 @@
                 </ul>
                 <br/>
             </section>
-            <h2 class="mc-teal" id="build">Build</h2><br/>
+            <h2 class="" id="build">Build</h2><br/>
             <p>Examples assume that you run your build in quickstart repository dir.</p>
             <br/>
 
@@ -242,7 +242,7 @@
             </code></pre>
 
             <br/><br/>
-            <h2 class="mc-teal" id="conclusion">Conclusion</h2>
+            <h2 class="" id="conclusion">Conclusion</h2>
 
             <p>We hope you agree that microconfig is easy to use. Now you can explore current example to see Microconfig
                 syntax,<br/> try out <a href="/plugin.html">IDE plugin</a> or deep dive into
