--- a/quickstart.html
+++ b/quickstart.html
@@ -61,7 +61,7 @@
     <nav class="navbar navbar-expand-md navbar-light shadow-sm">
         <div class="container">
             <a href="./" class="navbar-brand">
-                <img style="width: 200px; " src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
+                <img style="height: 90px; " src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
