--- a/features.html
+++ b/features.html
@@ -104,7 +104,7 @@
     <section class="jumbotron">
         <div class="container">
             <article class="markdown-body entry-content" itemprop="text">
-                <h1 class="">Features</h1>
+                <h1 class="text-center">Features</h1>
                 <p>This guide describes how Microconfig can help you solve common microservice configuration
                     problems.<br/> More details you can find in <a href="documentation.html">Docs</a>. </p>
                 <section id="layout">
