--- a/plugin.html
+++ b/plugin.html
@@ -93,7 +93,7 @@
     <section class="jumbotron">
         <div class="container">
             <article class="markdown-body entry-content" itemprop="text">
-                <h1 class="">JetBrains IDE plugin
+                <h1 class="text-center">JetBrains IDE plugin
                     <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io">
                         <img alt="JetBrains IDE plugins"
                              src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
