--- a/quickstart.html
+++ b/quickstart.html
@@ -92,7 +92,7 @@
 <main role="main" id="download">
     <section class="jumbotron">
         <div class="container">
-            <h1 id="quickstart" class="">Quickstart</h1>
+            <h1 id="quickstart" class="text-center">Quickstart</h1>
             <p>You will learn how to build configuration with Microconfig.</p>
             <br/>
 
