--- a/download.html
+++ b/download.html
@@ -101,8 +101,9 @@
                         <h4 class="mc-green">Binary Cli</h4>
                         <p class="lead">
                             You can download Microconfig for your OS from <a class=""
-                                href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
+                                                                             href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
                         </p>
+                        <br/>
                     </div>
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Homebrew</h4>
@@ -113,16 +114,18 @@
                     </div>
                 </div>
             </div>
-            <br/>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Jar Cli</h4>
                         <p class="lead">
                             You can download Microconfig executable jar from <a class=""
-                                href="https://github.com/microconfig/microconfig/releases">Github</a> or
-                            <a class="" href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven Central</a>.
+                                                                                href="https://github.com/microconfig/microconfig/releases">Github</a>
+                            or
+                            <a class="" href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven
+                                Central</a>.
                         </p>
+                        <br/>
                     </div>
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Core Jar</h4>
